feat(audit-log): add source IP tracking
- Add SourceIP field to AuditLogExt model
- Pass SourceIP in ResolveToAuditLog()
- Return SourceIP in API response
- Add source_ip to swagger definition
- Add IP column to frontend UI
- Add i18n translations (en/zh)
- Add unit tests for SourceIP functionality
- Add GitHub Action workflow for building Harbor

Notion: https://www.notion.so/Harbor-IP-2fc2cf39b32c818a9e27e751782bfaab

--- a/src/portal/src/app/base/project/project-log/audit-log.component.html
+++ b/src/portal/src/app/base/project/project-log/audit-log.component.html
@@ -76,6 +76,7 @@
                 'AUDIT_LOG.OPERATION_DESCRIPTION' | translate
             }}</clr-dg-column>
             <clr-dg-column>{{ 'AUDIT_LOG.RESULT' | translate }}</clr-dg-column>
+            <clr-dg-column>{{ 'AUDIT_LOG.SOURCE_IP' | translate }}</clr-dg-column>
             <clr-dg-placeholder>{{
                 'AUDIT_LOG.NOT_FOUND' | translate
             }}</clr-dg-placeholder>
@@ -89,6 +90,7 @@
                 <clr-dg-cell>{{ l.operation }}</clr-dg-cell>
                 <clr-dg-cell>{{ l.operation_description }}</clr-dg-cell>
                 <clr-dg-cell>{{ l.operation_result }}</clr-dg-cell>
+                <clr-dg-cell>{{ l.source_ip }}</clr-dg-cell>
             </clr-dg-row>
             <clr-dg-footer>
                 <clr-dg-pagination
